--- a/.github/workflows/pod_status.yaml
+++ b/.github/workflows/pod_status.yaml
@@ -18,7 +18,8 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           echo -e "Host *\n  StrictHostKeyChecking no" > ~/.ssh/config
-      - name: Connect SSH
+      - name: Connect SSH and check pod status
+        id: pod_status
         run: |
           ssh ${{ secrets.K8S_USER }}@${{ secrets.K8S_HOST }} -o ProxyCommand="ssh -W %h:%p -q ${{ secrets.PROXY_USER }}@${{ secrets.PROXY_HOST }} -p ${{ secrets.PROXY_PORT }}" \
-          "kubectl get pods -A"
+          "kubectl get pods -A --field-selector status.phase!=Running,status.phase!=Succeeded"
