--- a/.github/workflows/pod_status.yaml
+++ b/.github/workflows/pod_status.yaml
@@ -12,14 +12,42 @@ jobs:
     steps:
       - name: Checking the repository
         uses: actions/checkout@v4
+
       - name: Setup SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           echo -e "Host *\n  StrictHostKeyChecking no" > ~/.ssh/config
+
       - name: Connect SSH and check pod status
         id: pod_status
         run: |
           ssh ${{ secrets.K8S_USER }}@${{ secrets.K8S_HOST }} -o ProxyCommand="ssh -W %h:%p -q ${{ secrets.PROXY_USER }}@${{ secrets.PROXY_HOST }} -p ${{ secrets.PROXY_PORT }}" \
-          "kubectl get pods -A --field-selector status.phase!=Running,status.phase!=Succeeded"
+          kubectl get pods -A --field-selector status.phase!=Running,status.phase!=Succeeded > failed_pods.txt
+          
+          FAILED_PODS_CONTENT=$(cat failed_pods.txt)
+
+          if [ -s failed_pods.txt ]; then
+            echo "::set-output name=failed_pods::true"
+          else
+            echo "::set-output name=failed_pods::false"
+          fi
+          
+      - name: Slack Notification
+        if: steps.pod_status.outputs.failed_pods == 'true'
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_TITLE: "There are problematic pods"
+          SLACK_CUSTOM_PAYLOAD: |
+            {
+              "text": "Warning: The following pods are not in Running or Succeeded state:",
+              "attachments": [
+                {
+                  "text": "${{ steps.pod_status.outputs.FAILED_PODS_CONTENT }}",
+                  "color": "danger",
+                  "mrkdwn_in": ["text"]
+                }
+              ]
+            }
