Add debug pod status

--- a/.github/workflows/pod_status.yaml
+++ b/.github/workflows/pod_status.yaml
@@ -34,7 +34,11 @@ jobs:
 
       - name: Debug pod status
         run: |
-          echo: "FAILED_PODS: ${{ steps.pod_status.outputs.failed_pods_content }}
+          if [ -n "${{ steps.pod_status.outputs.failed_pods_content}}" ]; then
+            echo "FAILED_PODS: ${{ steps.pod_status.outputs.failed_pods_content }}"
+          else
+            echo "No failed pods found"
+          fi
 
       - name: Slack Notification
         if: steps.pod_status.outputs.failed_pods == 'true'
